# exchange-rate-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
.circleci/: config.yml
.run/: Run exchange-rate-service.run.xml
src/: main.rs  route.rs
src/model/: mod.rs  model.rs
src/route/: api.rs  index.rs  mod.rs  model.rs  route.rs
src/service/: client.rs  mod.rs  provider.rs  provider_ecb.rs  provider_float.rs  provider_frankfurter_v2.rs  provider_free.rs  rate.rs
