[package]
name = "exchange-rate-service"
version = "0.1.0"
edition = "2021"
authors = ["velocorner.com"]
description = "Exchange rate service for FX"
homepage = "https://velocorner.com"
keywords = ["exchange", "rates", "fx", "hostorical"]

[dependencies]
# updating to 4.9.0 pulls in extreme amount of deps and the docker image generation will take almost 2 hours
actix-web = { version = "4.11.0", features = ["macros"], default-features = false }
actix-files = "*"
actix-cors = "0.7.1"
# Disable default features that pull OpenSSL
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"], default-features = false }
utoipa = { version = "5.4.0", features = ["actix_extras", "time"], default-features = false }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], default-features = false } # download with reqwest instead of curl
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.143"
time = { version = "0.3.43", features = ["macros", "parsing"], default-features = false }
log = "0.4.28"
env_logger = { version = "0.11", default-features = false }
cached = { version = "0.56.0", features = ["proc_macro"], default-features = false } # caching results of functions
build_timestamp = "0.1.0"
sysinfo = { version = "0.37.0", features = ["system"], default-features = false }
humansize = "2.1.3"
regex = "1.11.1"
futures = { version = "0.3.31", default-features = false }
futures-executor = "0.3.31"
