[package]
name = "exchange-rate-service"
version = "0.1.0"
edition = "2021"
authors = ["velocorner.com"]
description = "Exchange rate service for FX"
homepage = "https://velocorner.com"
keywords = ["exchange", "rates", "fx", "hostorical"]

[dependencies]
actix-web = { version = "4.13.0", features = ["macros"], default-features = false }
actix-files = "0.6.10"
actix-cors = "0.7.1"
# Disable default features that pull OpenSSL
reqwest = { version = "0.13.3", features = ["json", "rustls"], default-features = false }
utoipa = { version = "5.4.0", features = ["actix_extras", "time"], default-features = false }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], default-features = false } # download with reqwest instead of curl
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["macros", "parsing"], default-features = false }
log = "0.4.29"
env_logger = { version = "0.11.10", default-features = false }
cached = { version = "0.59.0", features = ["proc_macro", "time_stores", "async"], default-features = false }
build_timestamp = "0.1.0"
sysinfo = { version = "0.38.4", features = ["system"], default-features = false }
humansize = "2.1.3"
regex = "1.12.3"
futures = { version = "0.3.32", default-features = false }
